# iwc

./: .gitignore  readme
eduardo/: fmincg (single thread)  nnCostFunction (MATLab multilayer version)  nnCostFunction(pthread)  nnCostFunction(single thread)  nnCostFunction.cpp (multilayer, sigle thread)  nnCostFunction_MATLab.m  randInitializeWeights(pthread)  randInitializeWeights(single thread)  readme
eduardo/MATLab/:  nnCostFunction2Hidden.m  miniBatch.m  nnCostFunction.m  nnCostFunction1Hidden.m  predict.m  scaling.m  test_NN.m
matlab/hmm/: feature_mfcc.m  load_audio_from_folder.m  run_iwc.m  test_hmm.m  train_hmm.m  trimSig.m
matlab/mfcc/: dctm.m  run_mfcc.m  trifbank.m
matlab/nn/: fmincg.m  nnCostFunction.m  randInitializeWeights.m  run_NN.m
nn/: CMakeLists.txt  CTestTestfile.cmake  clean.sh  nn.cpp  nn.h
